@@ -2,7 +2,7 @@ dnl Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.52)
 
-AC_INIT([gnome-system-monitor], [2.16.0],
+AC_INIT([gnome-system-monitor], [2.16.1],
         [http://bugzilla.gnome.org/enter_bug.cgi?product=system-monitor])
 AC_CONFIG_SRCDIR(configure.in)
 AC_CONFIG_HEADERS(config.h)
