@@ -1,3 +1,11 @@
+2006-09-11  Benoît Dejean  <benoit@placenet.org>
+
+	* configure.in:
+	* src/memmaps.c: (get_memory_format), (vmoff_tostring):
+	
+	Fixed VM addresses display on 64bit kernel.
+	Closes #354979.
+
 2006-09-05  Benoît Dejean  <benoit@placenet.org>
 
 	* NEWS:
